various: just use localStorage directly instead of syncing variables initialize localStorage more reasonably volume falseaudio manpages: don't repeat ourselves load display drivers reliably minesweeper gde initialize_startmenu hide overflowed lowRes body (lazy but it works... minimized windows are hard to fix properly)

--- a/css/lowRes.css
+++ b/css/lowRes.css
@@ -17,3 +17,7 @@ body {
  
     /*transform: scale(0.5);*/
 }
+
+#hide-right, #hide-bottom {
+    display: block;
+}
